<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="48dp"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="258dp"
        android:layout_height="196dp"
        android:layout_gravity="center"
        android:contentDescription="@string/description"
        android:src="@drawable/perfil" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/InicioSession"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/txtAlias"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/correo"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtContrasena"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/contraseña"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="iniciarSesion"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:gravity="center_vertical"
        android:onClick="registrarse"
        android:text="@string/olvido"
        android:textColor="@color/texto_selector"
        android:textSize="18sp" />

</LinearLayout>