<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:background="@color/cardview_dark_background"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parentLayout3"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:onClick="volverLobby"
                android:src="@drawable/leftarrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.533" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:text="Logros"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/parentLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <ImageView
                    android:id="@+id/iv_victorias"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/medal_inactive" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"

                    android:text="@string/logro_victorias"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <ImageView
                    android:id="@+id/iv_nivel"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/trophy_inactive" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"

                    android:text="@string/logro_nivel"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <ImageView
                    android:id="@+id/iv_amigos"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/friends_inactive" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"

                    android:text="@string/logro_amigos"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <ImageView
                    android:id="@+id/iv_partidas"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/wreath_inactive" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"

                    android:text="@string/logro_cantidad"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

